<resources>
    <string name="app_name">FastToGo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuario</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Fast To GO</string>
    <string name="menu_gallery">Perfil</string>
    <string name="menu_slideshow">Ajustes</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="direccionesGuardadas">Direcciones guardadas...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iniciarsesion">Iniciar sesión</string>
    <string name="crearcuenta">Crear cuenta</string>
    <string name="buscar">Buscar</string>
    <string name="guardar">Guardar</string>
    <string name="programar">Pragramar</string>
    <string name="casa">Casa</string>
    <string name="trabajo">Trabajo</string>
    <string name="añadirDireccion">Añadir dirección</string>
    <string name="buscarDireccion">Buscar dirección</string>
    <string name="comenzar">Comenzar ruta</string>
    <string name="tiempo">5min</string>
    <string name="distancia">900m</string>
    <string name="cancelar">Cancelar</string>
    <string name="puntosInteres">Puntos de interes</string>
    <string name="rutasProgramadas">Tus rutas</string>
    <string name="cerrarSesionText">Esta seguro que desea cerrar sesión?</string>
    <string name="confirmar">Confirmar</string>
    <string name="tusDirecciones">Tus direcciones</string>
    <string name="añadirRuta">Añadir ruta</string>
    <string name="ruta1">Vacaciones semana santa</string>
    <string name="radares">Radares</string>
    <string name="comisarias">Comisarias</string>
    <string name="gasolineras">Gasolineras</string>
    <string name="añadirGasolinera">Añadir gasolinera</string>
    <string name="guardadoExito">Guardado con exito</string>
</resources>