<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".puntosInteres"
    android:background="@color/app">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radares"
            android:backgroundTint="@color/grisBoton"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gasolineras"
            android:backgroundTint="@color/grisBoton"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comisarias"
            android:backgroundTint="@color/grisBoton"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_weight="1"/>
    </LinearLayout>

</FrameLayout>