<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menuDireccion"
    android:background="@color/app">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tusDirecciones"
            android:backgroundTint="@color/grisBoton"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/puntosInteres"
            android:backgroundTint="@color/grisBoton"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rutasProgramadas"
            android:backgroundTint="@color/grisBoton"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_weight="1"/>
    </LinearLayout>

</FrameLayout>