<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".direcciones">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/app"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="@dimen/boton_altura"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/grisBoton"
            android:text="@string/casa"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/button7"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="@dimen/boton_altura"
            android:backgroundTint="@color/grisBoton"
            android:text="@string/añadirDireccion"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:icon="@drawable/añadir"
            app:iconTint="#000000"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="@dimen/boton_altura"
            android:backgroundTint="@color/grisBoton"
            android:text="@string/trabajo"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/button8"
            tools:layout_editor_absoluteX="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>