<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/grisBoton"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal|bottom"
        android:layout_marginHorizontal="20dp">

        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comenzar"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:gravity="center"
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/text_border"
            android:text="@string/distancia"
            android:textColor="@color/teal_700"
            android:textSize="34sp"
            android:textStyle="bold"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="1"
            android:shadowColor="@color/black"/>

        <TextView
            android:gravity="center"
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tiempo"
            android:background="@drawable/text_border"
            android:textColor="@color/teal_200"
            android:textSize="34sp"
            android:textStyle="bold"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="1"
            android:shadowColor="@color/black"
            android:layout_weight="1"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>